[package]
authors = ["Jonathan Brown <jbrown@acuity.social>"]
edition = '2021'
homepage = 'https://acuity.social'
license = "GPL-3.0-only"
name = 'acuity-runtime'
repository = 'https://github.com/acuity-social/acuity-substrate'
version = '1.2.4'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
log = { version = "0.4.20", default-features = false }
claims = { package = "claims", path = "../pallets/claims", default-features = false }

# primitives
sp-authority-discovery = { version = "25.0.0", default-features = false }
sp-consensus-babe = { version = "0.31.0", default-features = false }
sp-consensus-grandpa = { version = "12.0.0", default-features = false }
sp-block-builder = { version = "25.0.0", default-features = false }
sp-inherents = { version = "25.0.0", default-features = false }
node-primitives = { version = "2.0.0", default-features = false }
sp-offchain = { version = "25.0.0", default-features = false }
sp-core = { version = "27.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-api = { version = "25.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }
sp-staking = { version = "25.0.0", default-features = false }
sp-session = { version = "26.0.0", default-features = false }
sp-transaction-pool = { version = "25.0.0", default-features = false }
sp-statement-store = { version = "9.0.0", default-features = false }
sp-version = { version = "28.0.0", default-features = false }
sp-io = { version = "29.0.0", default-features = false }
sp-npos-elections = { version = "25.0.0", default-features = false }

# frame dependencies
frame-executive = { version = "27.0.0", default-features = false }
frame-benchmarking = { version = "27.0.0", default-features = false, optional = true }
frame-support = { version = "27.0.0", default-features = false }
frame-system = { version = "27.0.0", default-features = false }
frame-system-benchmarking = { version = "27.0.0", default-features = false, optional = true }
frame-election-provider-support = { version = "27.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "25.0.0", default-features = false }
frame-try-runtime = { version = "0.33.0", default-features = false, optional = true }
pallet-bags-list = { version = "26.0.0", default-features = false }
pallet-bounties = { version = "26.0.0", default-features = false }
pallet-child-bounties = { version = "26.0.0", default-features = false }
pallet-conviction-voting = { version = "27.0.0", default-features = false }
pallet-election-provider-multi-phase = { version = "26.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "26.0.0", default-features = false, optional = true }
pallet-elections-phragmen = { version = "28.0.0", default-features = false }
pallet-fast-unstake = { version = "26.0.0", default-features = false }
pallet-message-queue = { version = "30.0.0", default-features = false }
pallet-nomination-pools = { version = "24.0.0", default-features = false }
pallet-nomination-pools-benchmarking = { version = "25.0.0", default-features = false, optional = true }
pallet-nomination-pools-runtime-api = { version = "22.0.0", default-features = false }
pallet-offences = { version = "26.0.0", default-features = false }
pallet-offences-benchmarking = { version = "27.0.0", default-features = false, optional = true }
pallet-preimage = { version = "27.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "15.0.0", default-features = false }
pallet-ranked-collective = { version = "27.0.0", default-features = false }
pallet-remark = { version = "27.0.0", default-features = false }
pallet-referenda = { version = "27.0.0", default-features = false }
pallet-staking-runtime-api = { version = "13.0.0", default-features = false }
pallet-state-trie-migration = { version = "28.0.0", default-features = false }
pallet-statement = { version = "9.0.0", default-features = false }
pallet-authority-discovery = { version = "27.0.0", default-features = false }
pallet-authorship = { version = "27.0.0", default-features = false }
pallet-babe = { version = "27.0.0", default-features = false }
pallet-balances = { version = "27.0.0", default-features = false }
pallet-collective = { version = "27.0.0", default-features = false }
pallet-contracts = { version = "26.0.0", default-features = false }
pallet-contracts-primitives = { version = "29.0.0", default-features = false }
pallet-democracy = { version = "27.0.0", default-features = false }
pallet-identity = { version = "27.0.0", default-features = false }
pallet-im-online = { version = "26.0.0", default-features = false }
pallet-indices = { version = "27.0.0", default-features = false }
pallet-multisig = { version = "27.0.0", default-features = false }
pallet-membership = { version = "27.0.0", default-features = false }
pallet-grandpa = { version = "27.0.0", default-features = false }
pallet-proxy = { version = "27.0.0", default-features = false }
pallet-session = { version = "27.0.0", default-features = false }
pallet-session-benchmarking = { version = "27.0.0", default-features = false, optional = true }
pallet-recovery = { version = "27.0.0", default-features = false }
pallet-staking = { version = "27.0.0", default-features = false }
pallet-staking-reward-curve = { version = "10.0.0", default-features = false }
pallet-scheduler = { version = "28.0.0", default-features = false }
pallet-sudo = { version = "27.0.0", default-features = false }
pallet-timestamp = { version = "26.0.0", default-features = false }
pallet-tips = { version = "26.0.0", default-features = false }
pallet-treasury = { version = "26.0.0", default-features = false }
pallet-transaction-payment = { version = "27.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "27.0.0", default-features = false }
pallet-transaction-storage = { version = "26.0.0", default-features = false }
pallet-utility = { version = "27.0.0", default-features = false }
pallet-vesting = { version = "27.0.0", default-features = false }

pallet-acuity-orderbook = { git = 'https://github.com/acuity-social/acuity-orderbook-pallet', branch = "master", default-features = false }

pallet-acuity-orderbook-rpc-runtime-api = { git = 'https://github.com/acuity-social/acuity-orderbook-pallet', branch = "master", default-features = false }

pallet-acuity-atomic-swap = { git = 'https://github.com/acuity-social/acuity-atomic-swap-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

[build-dependencies]
substrate-wasm-builder = "16.0.0"

[features]
default = ['std']
with-tracing = ["frame-executive/with-tracing"]
std = [
    'codec/std',
    'frame-executive/std',
		"frame-support/std",
		"frame-benchmarking/std",
		"frame-system-rpc-runtime-api/std",
		"frame-system/std",
    'pallet-authority-discovery/std',
    "pallet-authorship/std",
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-bounties/std',
    'pallet-collective/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
		'pallet-conviction-voting/std',
    'pallet-democracy/std',
    "pallet-elections-phragmen/std",
	"pallet-fast-unstake/std",
	'pallet-election-provider-multi-phase/std',
    'pallet-grandpa/std',
    "pallet-identity/std",
    'pallet-im-online/std',
    'pallet-indices/std',
    "pallet-membership/std",
	"pallet-message-queue/std",
    "pallet-multisig/std",
		"pallet-nomination-pools/std",
		"pallet-nomination-pools-runtime-api/std",
    'pallet-offences/std',
    'pallet-proxy/std',
	"pallet-insecure-randomness-collective-flip/std",
	'pallet-recovery/std',
		"pallet-remark/std",
    'pallet-staking/std',
	"pallet-staking-runtime-api/std",
	"pallet-state-trie-migration/std",
	"pallet-statement/std",
    'pallet-session/std',
    'pallet-scheduler/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-tips/std',
    'pallet-treasury/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    "pallet-transaction-storage/std",
    'pallet-utility/std',
	 'pallet-referenda/std',
    'pallet-vesting/std',
	 'pallet-acuity-orderbook/std',
	 'pallet-acuity-atomic-swap/std',
	 'pallet-acuity-trusted-accounts/std',
    'pallet-acuity-trusted-accounts-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-authority-discovery/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
	"sp-statement-store/std",
    'sp-version/std',
    'claims/std',
  "log/std",
    "sp-io/std",
	 "pallet-child-bounties/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking",
	"pallet-offences-benchmarking",
	"pallet-proxy/runtime-benchmarks",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-referenda/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
  "pallet-tips/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
  "claims/runtime-benchmarks",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-conviction-voting/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-statement/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
