[package]
authors = ["Jonathan Brown <jbrown@acuity.social>"]
edition = '2021'
homepage = 'https://acuity.social'
license = "GPL-3.0-only"
name = 'acuity-runtime'
repository = 'https://github.com/acuity-social/acuity-substrate'
version = '1.2.4'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
log = { version = "0.4.20", default-features = false }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc", "arbitrary_precision"] }
claims = { package = "claims", path = "../pallets/claims", default-features = false }

# pallet-asset-conversion: turn on "num-traits" feature
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "num-traits", "scale-info"] }

# primitives
sp-authority-discovery = { version = "25.0.0", default-features = false }
sp-consensus-babe = { version = "0.31.0", default-features = false }
sp-consensus-grandpa = { version = "12.0.0", default-features = false }
sp-block-builder = { version = "25.0.0", default-features = false }
sp-genesis-builder = { version = "0.6.0", default-features = false }
sp-inherents = { version = "25.0.0", default-features = false }
node-primitives = { version = "2.0.0", default-features = false }
sp-mixnet = { version = "0.3.0", default-features = false }
sp-offchain = { version = "25.0.0", default-features = false }
sp-core = { version = "27.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-api = { version = "25.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }
sp-staking = { version = "25.0.0", default-features = false }
sp-storage = { version = "18.0.0", default-features = false }
sp-session = { version = "26.0.0", default-features = false }
sp-transaction-pool = { version = "25.0.0", default-features = false }
sp-statement-store = { version = "9.0.0", default-features = false }
sp-version = { version = "28.0.0", default-features = false }
sp-io = { version = "29.0.0", default-features = false }

# frame dependencies
frame-executive = { version = "27.0.0", default-features = false }
frame-benchmarking = { version = "27.0.0", default-features = false, optional = true }
frame-benchmarking-pallet-pov = { version = "17.0.0", default-features = false }
frame-support = { version = "27.0.0", default-features = false }
frame-system = { version = "27.0.0", default-features = false }
frame-system-benchmarking = { version = "27.0.0", default-features = false, optional = true }
frame-election-provider-support = { version = "27.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "25.0.0", default-features = false }
frame-try-runtime = { version = "0.33.0", default-features = false, optional = true }
pallet-alliance = { version = "26.0.0", default-features = false }
pallet-asset-conversion = { version = "9.0.0", default-features = false }
pallet-asset-rate = { version = "6.0.0", default-features = false }
pallet-assets = { version = "28.0.0", default-features = false }
pallet-authority-discovery = { version = "27.0.0", default-features = false }
pallet-authorship = { version = "27.0.0", default-features = false }
pallet-babe = { version = "27.0.0", default-features = false }
pallet-bags-list = { version = "26.0.0", default-features = false }
pallet-balances = { version = "27.0.0", default-features = false }
pallet-bounties = { version = "26.0.0", default-features = false }
pallet-broker = { version = "0.5.0", default-features = false }
pallet-child-bounties = { version = "26.0.0", default-features = false }
pallet-collective = { version = "27.0.0", default-features = false }
pallet-contracts = { version = "26.0.0", default-features = false }
pallet-conviction-voting = { version = "27.0.0", default-features = false }
pallet-core-fellowship = { version = "11.0.0", default-features = false }
pallet-democracy = { version = "27.0.0", default-features = false }
pallet-election-provider-multi-phase = { version = "26.0.0", default-features = false }
pallet-election-provider-support-benchmarking = { version = "26.0.0", default-features = false, optional = true }
pallet-elections-phragmen = { version = "28.0.0", default-features = false }
pallet-fast-unstake = { version = "26.0.0", default-features = false }
pallet-nis = { version = "27.0.0", default-features = false }
pallet-grandpa = { version = "27.0.0", default-features = false }
pallet-im-online = { version = "26.0.0", default-features = false }
pallet-indices = { version = "27.0.0", default-features = false }
pallet-identity = { version = "27.0.0", default-features = false }
pallet-membership = { version = "27.0.0", default-features = false }
pallet-message-queue = { version = "30.0.0", default-features = false }
pallet-mixnet = { version = "0.3.0", default-features = false }
pallet-mmr = { version = "26.0.0", default-features = false }
pallet-multisig = { version = "27.0.0", default-features = false }
pallet-nomination-pools = { version = "24.0.0", default-features = false }
pallet-nomination-pools-benchmarking = { version = "25.0.0", default-features = false, optional = true }
pallet-nomination-pools-runtime-api = { version = "22.0.0", default-features = false }
pallet-offences = { version = "26.0.0", default-features = false }
pallet-offences-benchmarking = { version = "27.0.0", default-features = false, optional = true }
pallet-preimage = { version = "27.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "15.0.0", default-features = false }
pallet-ranked-collective = { version = "27.0.0", default-features = false }
pallet-recovery = { version = "27.0.0", default-features = false }
pallet-referenda = { version = "27.0.0", default-features = false }
pallet-remark = { version = "27.0.0", default-features = false }
pallet-session = { version = "27.0.0", default-features = false }
pallet-session-benchmarking = { version = "27.0.0", default-features = false, optional = true }
pallet-staking = { version = "27.0.0", default-features = false }
pallet-staking-reward-curve = { version = "10.0.0", default-features = false }
pallet-staking-runtime-api = { version = "13.0.0", default-features = false }
pallet-state-trie-migration = { version = "28.0.0", default-features = false }
pallet-statement = { version = "9.0.0", default-features = false }
pallet-scheduler = { version = "28.0.0", default-features = false }
pallet-sudo = { version = "27.0.0", default-features = false }
pallet-timestamp = { version = "26.0.0", default-features = false }
pallet-tips = { version = "26.0.0", default-features = false }
pallet-treasury = { version = "26.0.0", default-features = false }
pallet-utility = { version = "27.0.0", default-features = false }
pallet-transaction-payment = { version = "27.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "27.0.0", default-features = false }
pallet-transaction-storage = { version = "26.0.0", default-features = false }
pallet-vesting = { version = "27.0.0", default-features = false }
pallet-proxy = { version = "27.0.0", default-features = false }

pallet-acuity-orderbook = { git = 'https://github.com/acuity-social/acuity-orderbook-pallet', branch = "master", default-features = false }

pallet-acuity-orderbook-rpc-runtime-api = { git = 'https://github.com/acuity-social/acuity-orderbook-pallet', branch = "master", default-features = false }

pallet-acuity-atomic-swap = { git = 'https://github.com/acuity-social/acuity-atomic-swap-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

pallet-acuity-trusted-accounts-rpc-runtime-api  = { git = 'https://github.com/acuity-social/acuity-trusted-accounts-pallet', branch = "master", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "16.0.0", optional = true }

[features]
default = ['std']
with-tracing = ["frame-executive/with-tracing"]
std = [
	"codec/std",
	"frame-benchmarking-pallet-pov/std",
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"node-primitives/std",
	"pallet-alliance/std",
	"pallet-asset-conversion/std",
	"pallet-asset-rate/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-broker/std",
	"pallet-child-bounties/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-conviction-voting/std",
	"pallet-core-fellowship/std",
	"pallet-democracy/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-elections-phragmen/std",
	"pallet-fast-unstake/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-mixnet/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-nis/std",
	"pallet-nomination-pools-benchmarking?/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools/std",
	"pallet-offences-benchmarking?/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-ranked-collective/std",
	"pallet-recovery/std",
	"pallet-referenda/std",
	"pallet-remark/std",
	"pallet-scheduler/std",
	"pallet-session-benchmarking?/std",
	"pallet-session/std",
	"pallet-staking-runtime-api/std",
	"pallet-staking/std",
	"pallet-state-trie-migration/std",
	"pallet-statement/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"primitive-types/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-mixnet/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-statement-store/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"pallet-acuity-orderbook/std",
	"pallet-acuity-atomic-swap/std",
	"pallet-acuity-trusted-accounts/std",
	"pallet-acuity-trusted-accounts-rpc-runtime-api/std",
	"claims/std",
]
runtime-benchmarks = [
	"frame-benchmarking-pallet-pov/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-alliance/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-broker/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-core-fellowship/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-mixnet/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nis/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-state-trie-migration/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-benchmarking-pallet-pov/try-runtime",
	"frame-election-provider-support/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-alliance/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-broker/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-core-fellowship/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-mixnet/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nis/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-remark/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-state-trie-migration/try-runtime",
	"pallet-statement/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"sp-runtime/try-runtime",
]
