[package]
name = 'acuity-runtime'
version = '2.0.0'
authors.workspace = true
description = "Acuity runtime."
edition.workspace = true
build = "build.rs"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { features = [
	"derive",
	"max-encoded-len",
], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
static_assertions = { workspace = true, default-features = true }
log = { workspace = true }
serde_json = { features = ["alloc", "arbitrary_precision"], workspace = true }

# pallet-asset-conversion: turn on "num-traits" feature
# primitives
sp-authority-discovery = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }
sp-consensus-beefy = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
# primitives = { path = "../primitives", default-features = false }
sp-mixnet = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
# sp-storage = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-statement-store = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

# frame dependencies
frame-executive = { workspace = true, default-features = false }
# frame-benchmarking = { workspace = true, default-features = false, optional = true }
# frame-benchmarking-pallet-pov = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false, features = ["tuples-96"] }
frame-system = { workspace = true, default-features = false }
# frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-election-provider-support = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-metadata-hash-extension = { workspace = true, default-features = false }
# frame-try-runtime = { workspace = true, default-features = false, optional = true }
# pallet-alliance = { workspace = true, default-features = false }
pallet-asset-conversion = { workspace = true, default-features = false }
pallet-asset-conversion-tx-payment = { workspace = true, default-features = false }
pallet-asset-rate = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-babe = { workspace = true, default-features = false }
pallet-bags-list = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-beefy = { workspace = true, default-features = false }
pallet-beefy-mmr = { workspace = true, default-features = false }
pallet-bounties = { workspace = true, default-features = false }
# pallet-broker = { workspace = true, default-features = false }
pallet-child-bounties = { workspace = true, default-features = false }
# pallet-contracts =  { workspace = true, default-features = false }
pallet-conviction-voting = { workspace = true, default-features = false }
# pallet-core-fellowship = { workspace = true, default-features = false }
pallet-election-provider-multi-phase = { workspace = true, default-features = false }
# pallet-election-provider-support-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-fast-unstake = { workspace = true, default-features = false }
# pallet-nis = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-indices = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-message-queue = { workspace = true, default-features = false }
pallet-mmr = { workspace = true, default-features = false }
pallet-mixnet = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-nomination-pools = { workspace = true, default-features = false }
# pallet-nomination-pools-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-nomination-pools-runtime-api = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
# pallet-offences-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-preimage = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-recovery = { workspace = true, default-features = false }
pallet-referenda = { workspace = true, default-features = false }
pallet-remark = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
# pallet-session-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-skip-feeless-payment = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-staking-runtime-api = { workspace = true, default-features = false }
pallet-state-trie-migration = { workspace = true, default-features = false }
pallet-statement = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-transaction-storage = { workspace = true, default-features = false }
pallet-vesting = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }
pallet-whitelist = { workspace = true, default-features = false }
primitive-types = { features = ["codec", "num-traits", "scale-info"], workspace = true }
node-primitives.workspace = true
# pallet-example-mbm.workspace = true
# pallet-example-tasks.workspace = true

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
# with-tracing = ["polkadot-sdk/with-tracing"]
std = [
	"codec/std",
	# "frame-benchmarking-pallet-pov/std",
	# "frame-benchmarking/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-support/std",
	# "frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-metadata-hash-extension/std",
	"frame-system/std",
	# "frame-try-runtime?/std",
	"log/std",
	# "pallet-alliance/std",
	"pallet-asset-conversion/std",
	"pallet-asset-conversion-tx-payment/std",
	"pallet-asset-rate/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-beefy/std",
	"pallet-beefy-mmr/std",
	"pallet-bounties/std",
	# "pallet-broker/std",
	"pallet-child-bounties/std",
	# "pallet-contracts/std",
	"pallet-conviction-voting/std",
	# "pallet-core-fellowship/std",
	"pallet-election-provider-multi-phase/std",
	# "pallet-election-provider-support-benchmarking?/std",
	"pallet-fast-unstake/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-message-queue/std",
	"pallet-mixnet/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	# "pallet-nis/std",
	# "pallet-nomination-pools-benchmarking?/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools/std",
	# "pallet-offences-benchmarking?/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-recovery/std",
	"pallet-referenda/std",
	"pallet-remark/std",
	"pallet-scheduler/std",
	# "pallet-session-benchmarking?/std",
	"pallet-session/std",
	"pallet-skip-feeless-payment/std",
	"pallet-staking-runtime-api/std",
	"pallet-staking/std",
	"pallet-state-trie-migration/std",
	"pallet-statement/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	"node-primitives/std",
	# "pallet-example-mbm/std",
	# "pallet-example-tasks/std",
	# "polkadot-sdk/std",
	"primitive-types/std",
	"scale-info/std",
	# "serde_json/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-arithmetic/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	# "sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-mixnet/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-statement-store/std",
	"sp-std/std",
	# "sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"serde_json/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	# "frame-benchmarking-pallet-pov/runtime-benchmarks",
	# "frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	# "frame-system-benchmarking/runtime-benchmarks",
	# "frame-system/runtime-benchmarks",
	# "pallet-alliance/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	# "pallet-broker/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	# "pallet-contracts/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	# "pallet-core-fellowship/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	# "pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-mixnet/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	# "pallet-nis/runtime-benchmarks",
	# "pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	# "pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	# "pallet-session-benchmarking/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-state-trie-migration/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	# "frame-benchmarking-pallet-pov/try-runtime",
	"frame-election-provider-support/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	# "frame-system/try-runtime",
	# "frame-try-runtime/try-runtime",
	# "pallet-alliance/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-asset-conversion-tx-payment/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-beefy/try-runtime",
	"pallet-beefy-mmr/try-runtime",
	"pallet-bounties/try-runtime",
	# "pallet-broker/try-runtime",
	"pallet-child-bounties/try-runtime",
	# "pallet-contracts/try-runtime",
	"pallet-conviction-voting/try-runtime",
	# "pallet-core-fellowship/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-mixnet/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	# "pallet-nis/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-remark/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-skip-feeless-payment/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-state-trie-migration/try-runtime",
	"pallet-statement/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-whitelist/try-runtime",
	"sp-runtime/try-runtime",
]
metadata-hash = ["substrate-wasm-builder/metadata-hash"]
riscv = []
