[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'
name = 'claims'
version = "0.9.8"
license = "GPL-3.0-only"
homepage = "https://polkadot.network/"
repository = "https://github.com/paritytech/polkadot"
description = "Module to process claims from MIX addresses."

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.8"
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.8"
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.8"
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.8"
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.8"
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.8"
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, optional = true }
libsecp256k1 = { version = "0.6.0", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
hex-literal = "0.3.1"
serde_json = "1.0.61"

[features]
default = ['std']
no_std = []
std = [
  'codec/std',
  'frame-system/std',
  'frame-support/std',
  'sp-runtime/std',
  'sp-io/std',
  'sp-std/std',
  'sp-core/std',
  'rustc-hex/std',
	'serde/std',
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
